--- a/css/style.css
+++ b/css/style.css
@@ -1,158 +1,171 @@
 * {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0%;
-    box-sizing: border-box;
+  margin: 0%;
+  box-sizing: border-box;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
-/*header-----------------------------------------------------;*/
-
-.menu {
-    margin-left: auto;
-    display: flex;
+* {
+  font-family: "Montserrat", sans-serif;
 }
-
-
-header {
-    background-color: #1A5276;
-    height: 20vh;
-    color: white;
-    padding: 15px;
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    height: 15vh;
-    width: 15vh;
-}
-
-
-.hotelelfaro {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 200;
-    /* width: 30%; */
-}
-
-
-.menuheader {
-    font-weight: 400;
-    width: 50vh;
-    display: flex;
-    justify-content: space-around;
-}
-
-.menuarriba {
-    width: 50vh;
-    display: flex;
-    justify-content: space-around;
-}
-
-
-
-
-/*cuerpo index -----------------------------------------------;*/
-
-.fotohotel {
-    width: 100%;
-    background-image: url(../assets/img/fotohotel.png);
-}
-
-.cuerpoindex { 
-    height: 70vh;
-    background: url(../assets/img/fotohotel.png)no-repeat fixed center center;
-    background-size: cover;
-
-}
-
-
-/*cuerpo quienes somos -----------------------------------------;*/
-.partequienes{
-    justify-content: space-between;
-    display: flex;
-align-content: center;}
-
-.divparrafo{width: 50%;}
-
-.divimagen{width: 20%;}
-
-/*cuerpo apart/servicios ---------------------------------------;*/
-.secapart {
-    display: inline;
-    justify-content: space-between;
-    display: flex;
-    height: 70vh;
-}
-
-.apart {
-    max-height: 35vh;
-    max-width: 25vw;
-    align-items: center;
-}
-
-
-.tarjetaapart {
-    background-color: slategray;
-    max-height: 40vh;
-    max-width: 30vw;
-    display: inline-block;
-    margin: 5vh 3vw 5vh;
-    padding: 0.5rem 0.5rem;
-    text-size-adjust: auto;
-    text-align: center;
-    align-content: center;
-}
-
-.card{
-   
-    text-align: center;
-    font-style: normal;
-}
-
-
-
-@media (max-width: 990px){
-    .secapart{
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .orgatarjeta{height: auto;}
-
-}
-
-/*Reservas----------------------------------------------------;*/
-
-.mainformulario {
-    align-content: center;
-    height: 70vh;
-}
-
-/*footer-----------------------------------------------------;*/
 
 footer {
-    background-color: #1A5276;
-    height: 10vh;
-    color: white;
-    padding: 15px;
-    justify-content: end;
+  background-color: #1A5276;
+  height: 10vh;
+  color: white;
+  padding: 15px;
+  justify-content: end;
 }
 
-
-
 .icono {
-    height: 5vh;
+  height: 5vh;
 }
 
 .menuabajo {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
+
+.menu {
+  margin-left: auto;
+  display: flex;
+}
+
+header {
+  background-color: #1A5276;
+  height: 20vh;
+  color: white;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-expand-lg {
+  justify-content: end;
+}
+
+.logo {
+  height: 15vh;
+  width: 15vh;
+}
+
+.hotelelfaro {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
+  /* width: 30%; */
+}
+
+.menuheader {
+  font-weight: 400;
+  width: 50vh;
+  display: flex;
+  justify-content: space-around;
+}
+
+.menuarriba {
+  width: 50vh;
+  display: flex;
+  justify-content: space-around;
+}
+
+.carrouselindex {
+  height: 70%;
+}
+
+.secapart {
+  display: inline;
+  justify-content: space-between;
+  display: flex;
+  height: 70vh;
+}
+
+.apart {
+  max-height: 35vh;
+  max-width: 25vw;
+  align-items: center;
+}
+
+.tarjetaapart {
+  background-color: slategray;
+  max-height: 40vh;
+  max-width: 30vw;
+  display: inline-block;
+  margin: 5vh 3vw 5vh;
+  padding: 0.5rem 0.5rem;
+  text-size-adjust: auto;
+  text-align: center;
+  align-content: center;
+}
+
+.card {
+  text-align: center;
+  font-style: normal;
+}
+
+.firma {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.secapart {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+}
+
+/*.apart {
+
+    align-items: center;
+
+};*/
+.tarjetaapart {
+  background-color: slategray;
+  max-height: 40vh;
+  max-width: 30vw;
+  display: inline-block;
+  margin: 5vh 3vw 5vh;
+  padding: 0.5rem 0.5rem;
+  text-size-adjust: auto;
+  text-align: center;
+  align-content: center;
+}
+
+.card {
+  text-align: center;
+  font-style: normal;
+}
+
+.parrafocard {
+  font-style: italic;
+}
+
+.orgatarjeta {
+  width: 100vh;
+}
+
+.mainformulario {
+  align-content: center;
+  height: 70vh;
+}
+
+@media (min-width: 990px) {
+  .secapart {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .orgatarjeta {
+    height: auto;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
