--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -6,11 +6,12 @@ footer {
     justify-content: end;
 }
 
+
+
 .icono {
     height: 5vh;
 }
 
-.menuabajo {
-    display: flex;
-    justify-content: space-around;
-}
+.menufooter {width: 40vh;
+    
+    }
