--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./layout/header";
 @import "./pages/index";
 @import "./pages/quienessomos";
-@import "./pages/apartservicios";
+@import "./pages/apart";
 @import "./pages/reservas";
 @import "./Media/media";
+@import "./pages/servicio";
