--- a/scss/pages/_quienessomos.scss
+++ b/scss/pages/_quienessomos.scss
@@ -1,10 +1,14 @@
-.contenedor{
+.contenedorquienes{
     height: 80vh;
     display: grid;
-grid-template-columns: 50% 50%;
-grid-template-rows:80% ;
+grid-template-columns: 50% 50%; 
+grid-template-rows: 10% 80% 10%;
+justify-content: stretch;
+align-items: stretch;
 }
 .ingquienes{height: 60vh;}
 
 .parrafoquienes{background-color:#1A5276;
 color: white;}
+
+.gespacio{grid-column: 1/3;}
