--- a/scss/pages/_apart.scss
+++ b/scss/pages/_apart.scss
@@ -18,9 +18,12 @@ align-items: center;}
     justify-content: center;
     text-align: center;
     font-style: normal;
+    align-items: center;
 }
 
 .parrafocard {
     font-style: italic;
 }
-.apart{width: 80%;}
+.apart{
+    align-items: center;
+    width: 80%;}
