--- a/scss/pages/_servicio.scss
+++ b/scss/pages/_servicio.scss
@@ -5,7 +5,7 @@ grid-template-columns: 33% 33% 33%;
 grid-template-rows: 10% 70% 10%;
 justify-content: stretch;
 align-items: stretch;
-gap: 5rem;
+gap: 3rem;
 }
 
 
@@ -14,10 +14,13 @@ align-items: center;}
 
 
 .cardserv {
-    height: 100%;
+    display: grid;
+   
     justify-content: center;
     text-align: center;
     font-style: normal;
+    align-items: center;
 }
-.imgserv{width: 80%;}
+.imgserv{width: 80%;
+}
 
