--- a/css/style.css
+++ b/css/style.css
@@ -233,24 +233,26 @@ ul {
     width: 80%;
   }
   /*Servicios;*/
-  .contenedorserv {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto auto;
+  .cuerposervicios {
+    height: 90vh;
+  }
+  .espacioserv {
+    height: 10%;
+  }
+  .tituloserv {
+    height: 10vh;
+  }
+  .carrouselserv {
+    height: 40vh;
+    display: flex;
     justify-content: center;
-    align-items: center;
-    width: 90%;
   }
-  .gespacioserv {
-    grid-column: 1/2;
-    display: grid;
+  .carousel {
+    height: auto;
   }
-  .cardserv {
-    display: grid;
-    align-items: center;
-  }
-  .imgserv {
-    width: 60%;
+  .carousel-inner {
+    height: 90vh;
+    justify-content: center;
   }
   /*reservas;*/
   .mainformulario {
@@ -261,31 +263,21 @@ ul {
     height: 20%;
   }
 }
-.contenedorserv {
+.cuerposervicios {
   height: 80vh;
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-template-rows: 10% 70% 10%;
-  justify-content: stretch;
-  align-items: stretch;
-  gap: 3rem;
 }
 
-.gespacioserv {
-  grid-column: 1/4;
-  align-items: center;
+.carousel-inner {
+  height: 60vh;
 }
 
-.cardserv {
-  display: grid;
-  justify-content: center;
-  text-align: center;
-  font-style: normal;
-  align-items: center;
+.espacioserv {
+  height: 5vh;
 }
 
-.imgserv {
-  width: 80%;
+.h3serv {
+  background-color: #1A5276;
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
