--- a/scss/pages/_apart.scss
+++ b/scss/pages/_apart.scss
@@ -14,7 +14,7 @@ align-items: center;}
 
 
 .card {
-    height: 100%;
+    height: 40vh;
     justify-content: center;
     text-align: center;
     font-style: normal;
@@ -25,5 +25,6 @@ align-items: center;}
     font-style: italic;
 }
 .apart{
+    padding: 2rem;
     align-items: center;
     width: 80%;}
